--- a/package.json
+++ b/package.json
@@ -5,15 +5,19 @@
   "license": "ISC",
   "author": "",
   "type": "module",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
+    "start": "node --es-module-specifier-resolution=node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "axios": "^1.11.0",
-    "cheerio": "^1.1.2",
+    "axios": "^1.7.2",
+    "cheerio": "^1.0.0",
     "dotenv": "^17.2.1",
-    "express": "^5.1.0",
-    "nodemailer": "^7.0.6"
+    "express": "^4.19.2",
+    "nodemailer": "^6.9.13"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
