--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cheerio": "^1.0.0",
     "dotenv": "^17.2.1",
     "express": "^4.19.2",
+    "firebase-admin": "^13.5.0",
     "nodemailer": "^6.9.13"
   },
   "engines": {
