--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^17.2.1",
     "express": "^4.19.2",
     "firebase-admin": "^13.5.0",
+    "luxon": "^3.7.2",
     "nodemailer": "^6.9.13"
   },
   "engines": {
